Used jar file in docker