@@ -1,17 +1,13 @@
-FROM eclipse-temurin:17-jdk-jammy as build
+FROM azul/zulu-openjdk-alpine:19-latest as build
 WORKDIR /workspace/app
 COPY src src
 COPY gradle gradle
 COPY build.gradle.kts .
 COPY gradlew .
 COPY settings.gradle.kts .
-RUN --mount=type=cache,target=/root/.m2 ./gradlew build -x test
-RUN mkdir -p build/dependency && (cd build/dependency; jar -xf ../libs/*.jar)
+RUN --mount=type=cache,target=/root/.m2 ./gradlew build --no-daemon --console plain -x test
 
-FROM eclipse-temurin:17-jre-jammy
+FROM azul/zulu-openjdk-alpine:19-jre-latest
 VOLUME /app
-ARG DEPENDENCY=/workspace/app/build/dependency
-COPY --from=build ${DEPENDENCY}/BOOT-INF/lib /app/lib
-COPY --from=build ${DEPENDENCY}/META-INF /app/META-INF
-COPY --from=build ${DEPENDENCY}/BOOT-INF/classes /app
-ENTRYPOINT ["java", "-cp", "app:app/lib/*", "com.leijendary.spring.webflux.template.ApplicationKt"]
+COPY --from=build /workspace/app/build/libs/*.jar application.jar
+ENTRYPOINT ["java", "--enable-preview", "-jar", "application.jar"]
